added missing organizers

--- a/index.html
+++ b/index.html
@@ -211,6 +211,9 @@ which will be available in the ACM Digital Library.
         Thaís Vasconcelos Batista <span class="location">Federal University of Rio Grande do Norte, Brazil</span>
       </li>
       <li>
+        Stéphane Delbruel <span class="location">Leuven University, Belgium</span>
+      </li>
+      <li>
         David Bermbach <span class="location">TU Berlin, Germany</span>
       </li>
       <li>
@@ -251,13 +254,19 @@ which will be available in the ACM Digital Library.
         Frank Pallas <span class="location">TU Berlin, Germany</span>
       </li>
       <li>
-        Jean Bacon <span class="location">University of Cambridge, UK</span>
+        Gregory Katsaros <span class="location">Inmarsat, United Kingdom</span>
+      </li>
+      <li>
+        Jean Bacon <span class="location">University of Cambridge, United Kingdom</span>
+      </li>
+      <li>
+        Jatinder Singh <span class="location">University of Cambridge, United Kingdom</span>
       </li>
       <li>
         Jo Ueyama <span class="location">Universidade de São Paulo, Brazil</span>
       </li>
       <li>
-        Ken Moody <span class="location">University of Cambridge, UK</span>
+        Ken Moody <span class="location">University of Cambridge, United Kingdom</span>
       </li>
       <li>
         Kevin Lee <span class="location">Nottingham Trent University, United Kingdom</span>
