added Jean-Paul to PC

--- a/index.html
+++ b/index.html
@@ -263,6 +263,9 @@ which will be available in the ACM Digital Library.
         Jatinder Singh <span class="location">University of Cambridge, United Kingdom</span>
       </li>
       <li>
+        Jean-Paul Arcangeli <span class="location">University of Toulouse, France</span>
+      </li>
+      <li>
         Jo Ueyama <span class="location">Universidade de São Paulo, Brazil</span>
       </li>
       <li>
