added Douglas Schmidt to PC

--- a/index.html
+++ b/index.html
@@ -242,6 +242,9 @@ which will be available in the ACM Digital Library.
         Didier Donsez <span class="location">Grenoble University, France</span>
       </li>
       <li>
+        Douglas Schmidt <span class="location">Vanderbilt University, USA</span>
+      </li>
+      <li>
         Erik Wilde <span class="location">CA Technologies, Switzerland</span>
       </li>
       <li>
