added link to submission page

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       Along with the paper, you are encouraged to submit additional material (e.g., a link to a YouTube video) on a separate page which will not be published as part of the proceedings. We will later add the link to the submission site.
     </p>
     <p>
-      Papers must be submitted in PDF format via the submission site: <strong>TOBECOMPLETED</strong>.
+      Papers must be submitted in PDF format via the submission site: <strong><a href="https://m4iot17.hotcrp.com" target="_blank">https://m4iot17.hotcrp.com</a></strong>.
     </p>
     <p>
       All accepted and presented papers will appear in a Middleware 2017 companion proceedings,
