added Paul Grace to PC

--- a/index.html
+++ b/index.html
@@ -281,6 +281,9 @@ which will be available in the ACM Digital Library.
         Manuele Kirsch Pinheiro <span class="location">Paris Sorbonne University, France</span>
       </li>
       <li>
+        Paul Grace <span class="location">University of Southampton, United Kingdom</span>
+      </li>
+      <li>
         Paulo Pires <span class="location">Federal University of Rio Rio de Janeiro, Brazil</span>
       </li>
       <li>
