--- a/index.html
+++ b/index.html
@@ -314,12 +314,19 @@ which will be available in the ACM Digital Library.
       </a>
     </div>
 
+    <a class="twitter-timeline" data-lang="en" data-height="500" href="https://twitter.com/M4IoT">Tweets by M4IoT</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+    <div class="row">
+      <a href="#top-of-page" class="btn-up">
+        <div class="arrow-up"></div>
+      </a>
+    </div>
+
     <p class="gray center">
       <small>
          2017 - Contact us at <a href="mailto:contact@m4iot.org">contact@m4iot.org</a>
       </small>
     </p>
-
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
