more visible contact mail address

--- a/index.html
+++ b/index.html
@@ -308,6 +308,10 @@ which will be available in the ACM Digital Library.
       </li>      
     </ul>
 
+    <p>
+      Contact us at <a href="mailto:contact@m4iot.org">contact@m4iot.org</a>
+    </p>
+
     <div class="row">
       <a href="#top-of-page" class="btn-up">
         <div class="arrow-up"></div>
