updated email address

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ which will be available in the ACM Digital Library.
     </ul>
 
     <p>
-      Contact us at <a href="mailto:contact@m4iot.org">contact@m4iot.org</a>
+      Contact us at <a href="mailto:m4iot.workshop@gmail.com">m4iot.workshop@gmail.com</a>
     </p>
 
     <div class="row">
@@ -328,7 +328,7 @@ which will be available in the ACM Digital Library.
 
     <p class="gray center">
       <small>
-         2017 - Contact us at <a href="mailto:contact@m4iot.org">contact@m4iot.org</a>
+         2017 - Contact us at <a href="mailto:m4iot.workshop@gmail.com">m4iot.workshop@gmail.com</a>
       </small>
     </p>
 
