--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ which will be available in the ACM Digital Library.
           Paper submission deadline:
         </td>
         <td>
-          <strong>Sep. 4th 2017</strong>
+          <strong style="color: red;">Sep. 9th 2017</strong> <span style="text-decoration: line-through;">Sep. 4th 2017</span>
         </td>
       </tr>
       <tr>
