added further note on extended deadline

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 
 
   <div class="container">
+    <p style="color: red;">
+      Please note: we extended the submission deadline to September 9th 2017!
+    </p>
     <h1 id="welcome">Welcome</h1>
     <p>
       The Internet of Things (IoT) is creating new services and applications across various domains, including smart grids, intelligent transportation, healthcare, smart homes, and energy management. As a consequence, a complex ecosystem of interconnected applications, services, as well as physical and virtual devices emerges. In this ecosystem, enabled by corresponding middleware, devices share contextual data or receive control commands; services consume, process, and/or provide data; and applications leverage services and devices to fulfill users’ needs. This workshop focuses on two fundamental components in such ecosystems: the middleware that enables composition of applications, services, and devices; and the applications built on top of such middleware. Central topics of interest include the architecture of these components, how they process data, how they communicate with one another, and the process of how they are designed, implemented, and operated.
