--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <div class="container">
     <p style="color: red;">
-      Please note: we extended the submission deadline to September 9th 2017!
+      Please note: we extended the submission deadline to Sep. 9th 2017!
     </p>
     <h1 id="welcome">Welcome</h1>
     <p>
