--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ which will be available in the ACM Digital Library.
           Author notification:
         </td>
         <td>
-          <strong>Sep. 28th 2017</strong>
+          <strong style="color: red;">Sep. 29th 2017</strong> <span style="text-decoration: line-through;">Sep. 28th 2017</span>
         </td>
       </tr>
       <tr>
@@ -190,6 +190,14 @@ which will be available in the ACM Digital Library.
         </td>
         <td>
           <strong>Oct. 15th 2017</strong>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Middleware early registration deadline:
+        </td>
+        <td>
+          <strong>Oct. 31st 2017 <a href="http://2017.middleware-conference.org/registration.html" target="_blank">see registration details</a></strong>
         </td>
       </tr>
     </table>
