--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@ which will be available in the ACM Digital Library.
       </tr>
       <tr>
         <td>
-          Middleware early registration deadline:
+          Middleware early registration:
         </td>
         <td>
-          <strong>Oct. 31st 2017 <a href="http://2017.middleware-conference.org/registration.html" target="_blank">see registration details</a></strong>
+          <strong>Oct. 31st 2017 (<a href="http://2017.middleware-conference.org/registration.html" target="_blank">details</a>)</strong>
         </td>
       </tr>
     </table>
