updated time slots to match Middleware requirements

--- a/program.html
+++ b/program.html
@@ -15,7 +15,7 @@
 
 <ul>
   <li>
-    <strong>9:00 - Introduction, and keynote by Dr. Douglas C. Schmidt (Vanderbilt University)</strong><br>
+    <strong>8:30 - Introduction M4IoT and keynote by Dr. Douglas C. Schmidt (Vanderbilt University)</strong><br>
     Topic: <em>The Blockchain: What It is and Why It Matters for Us</em><br>
     <strong>Abstract:</strong> Since the inception of Bitcoin technology, its underlying data
     structure--the blockchain--has garnered much attention due its key
@@ -61,11 +61,11 @@
   </li>
 
   <li>
-    <strong>12:30 - Lunch break</strong>
+    <strong>12:00 - Lunch break</strong>
   </li>
 
   <li>
-    <strong>14:00 - Keynote by Prof. Paulo Ferreira (INESC-ID, IST)</strong><br>
+    <strong>13:30 - Introduction MECC and Keynote by Prof. Paulo Ferreira (INESC-ID, IST)</strong><br>
     Topic: <em>To be announced</em>
   </li>
 
@@ -93,7 +93,7 @@ Politécnica de Catalunya), Fernando Ramos (University of Lisbon), Roger Baig (G
   </li>
 
   <li>
-    <strong>17:30 - Wrap up</strong>
+    <strong>17:00 - Wrap up</strong>
   </li>
 </ul>
 
