attempt to expose program page

--- a/pages/program.html
+++ b/pages/program.html
@@ -1,8 +1,13 @@
+---
+permalink: "/program/"
+slug: program
+---
+
 <!DOCTYPE html>
 <html>
 <head>
 <head>
-  <title>IoT Federated Workshops: M4IoT & MECC</title>
+  <title>Program of the IoT Federated Workshops: M4IoT & MECC</title>
   <meta charset="UTF-8">
   <meta property="og:title" content="M4IoT - Workshop on Middleware and Applications for the Internet of Things"/>
 </head>
