updated link, added css

--- a/pages/program.html
+++ b/pages/program.html
@@ -1,6 +1,6 @@
 ---
-permalink: "/program/"
-slug: program
+permalink: "/program2017/"
+slug: program2017
 ---
 
 <!DOCTYPE html>
@@ -10,13 +10,29 @@ slug: program
   <title>Program of the IoT Federated Workshops: M4IoT & MECC</title>
   <meta charset="UTF-8">
   <meta property="og:title" content="M4IoT - Workshop on Middleware and Applications for the Internet of Things"/>
+  <meta charset="UTF-8">
+  <meta property="og:title" content="M4IoT - Workshop on Middleware and Applications for the Internet of Things"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:url" content="http://www.m4iot.org/"/>
+  <meta name="description" content="The M4IoT workshop focuses on the middleware that enables composition of applications, services, and devices in the Internet of Things, and on the applications built on top of such middleware.">
+  <meta property="og:description" content="The M4IoT workshop focuses on the middleware that enables composition of applications, services, and devices in the Internet of Things, and on the applications built on top of such middleware."/>
+  <meta name="viewport" content="initial-scale=1">
+  <link rel="author" href="Erik Wittern"/>
+
+  <link rel="apple-touch-icon" sizes="120x120" href="/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+
+  <link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Martel:400,700" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/m4iot.css">
 </head>
 </head>
 <body>
 
 <h2>Program of the IoT Federated Workshops: M4IoT & MECC</h2>
 
-<h4>Monday, December 11th 2016</h4>
+<h4>Monday, December 11th 2017</h4>
 
 <ul>
   <li>
