--- a/pages/program.html
+++ b/pages/program.html
@@ -23,7 +23,7 @@ slug: program2017
 
   <link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Martel:400,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/m4iot.css">
+  <link rel="stylesheet" type="text/css" href="../css/m4iot.css">
 </head>
 <body>
 
