--- a/index.html
+++ b/index.html
@@ -57,10 +57,96 @@
     </div>
 
 
-    <h1 id="program">Program</h1>
+    <h1 id="program">Program of the IoT Federated Workshops: M4IoT & <a href="http://mecc2017.dcc.fc.up.pt/" target="_blank">MECC</a></h1>
     <p>
-      To be announced...
+      M4IoT 2017 will be part of the IoT Federated Workshops, which also include the <a href="http://mecc2017.dcc.fc.up.pt/" target="_blank">Workshop on Middleware for Edge Clouds & Cloudlets (MECC)</a>. This is the overall program: 
     </p>
+
+    <h4>Monday, December 11th 2017</h4>
+
+    <ul>
+      <li>
+        <strong>8:30 - Introduction M4IoT and keynote by Dr. Douglas C. Schmidt (Vanderbilt University)</strong><br>
+        Topic: <em>The Blockchain: What It is and Why It Matters for Us</em><br>
+        <strong>Abstract:</strong> Since the inception of Bitcoin technology, its underlying data
+        structure--the blockchain--has garnered much attention due its key
+        properties, such as decentralization, transparency, and immutability.
+        These properties make blockchains suitable for decentralized apps
+        (DApps) that require trustless exchange, consistent and incorruptible
+        transaction records, as well as enables operational use cases beyond
+        cryptocurrencies.  For example, blockchain has the potential to
+        address interoperability challenges in a number of domains--including
+        IoT domains--such as delivering patient data securely to healthcare
+        organizations and devices, improving the overall efficiency of energy
+        transactions in electrical power distribution systems, and enabling
+        effective interactions between commuters and transit apps in smart
+        cities.  Despite the interest in using blockchain technology for
+        interoperability, however, little information is available on the
+        concrete architectural styles and recommendations for designing
+        middleware in support of blockchain-based DApps for IoT systems.  This
+        talk discusses key concepts in blockchains and important design,
+        privacy, and security considerations when considering using their use
+        in practice.
+      </li>
+
+      <li>
+        <strong>10:00 - Coffee Break</strong>
+      </li>
+
+      <li>
+        <strong>10:30 - Session: Middleware and Applications for the Internet of Things</strong>
+        <ul>
+          <li>
+            PlaTIBART: a Platform for Transactive IoT Blockchain Applications with Repeatable Testing (Michael A. Walker, Abhishek Dubey, Aron Laszka, Douglas C. Schmidt (Vanderbilt University))
+          </li>
+          <li>
+            A dynamic decision fusion middleware for trustworthy context-aware IoT applications (Tim Van hamme, Davy Preuveneers, Wouter Joosen (imec - DistriNet - KU Leuven))
+          </li>
+          <li>
+            IoTVar to transparently handle interactions between applications and IoT platforms (Courtais, Taconet, Conan, Chabridon (Télécom SudParis); Gomes, Cavalcante, Batista (Federal University of Rio Grande do Norte))
+          </li>
+          <li>
+            ThingsJS: Towards a Flexible and Self-Adaptable Middleware for Dynamic and Heterogeneous IoT Environments (Julien Gascon-Samson, Mohammad Rafiuzzaman, Karthik Pattabiraman (University of British Columbia))
+          </li>
+        </ul>
+      </li>
+
+      <li>
+        <strong>12:00 - Lunch break</strong>
+      </li>
+
+      <li>
+        <strong>13:30 - Introduction MECC and Keynote by Prof. Paulo Ferreira (INESC-ID, IST)</strong><br>
+        Topic: <em>To be announced</em>
+      </li>
+
+      <li>
+        <strong>15:00 - Coffee break</strong>
+      </li>
+
+      <li>
+        <strong>15:30 - Session: Middleware for Edge Clouds & Cloudlets</strong>
+        <ul>
+          <li>
+            Towards a Middleware for Mobile Edge-Cloud Applications (João Rodrigues, Eduardo R. B. Marques, Luís M. B. Lopes, Fernando Silva (University of Porto))
+          </li>
+          <li>
+            Towards a Persistent Publish/Subscribe System for Networks of Mobile Devices (Filipe Cerqueira, João A. Silva, João M. Lourenço, Hervé Paulino (Universidade NOVA de Lisboa))
+          </li>
+          <li>
+            Towards Decentralised Resilient Community Cloud Infrastructures (Arjuna Sathiaseelan, Mennan Selimi, Carlos Molina, Adisorn Lertsinsrubtavee (University of Cambridge), Leandro Navarro, Felix Freitag (Universitat
+    Politécnica de Catalunya), Fernando Ramos (University of Lisbon), Roger Baig (Guifi.net Foundation))
+          </li>
+          <li>
+            A Bandwidth Allocation Scheme Based on Residual Bandwidth Information in Mobile Edge Computing (Yusuke Ito, Hiroyuki Koga (University of Kitakyushu), Katsuyoshi Iida (Hokkaido University))
+          </li>
+        </ul>
+      </li>
+
+      <li>
+        <strong>17:00 - Wrap up</strong>
+      </li>
+    </ul>
 
     <div class="row">
       <a href="#top-of-page" class="btn-up">
