added second keynote

--- a/index.html
+++ b/index.html
@@ -114,7 +114,26 @@
 
       <li>
         <strong>13:30 - Introduction MECC and Keynote by Prof. Paulo Ferreira (INESC-ID, IST)</strong><br>
-        Topic: <em>To be announced</em>
+        Topic: <em>Live Migration and Garbage Collection for Big Data Java Applications</em>
+        <strong>Abstract:</strong> The need to process large amounts of data, Big Data, is a
+        reality, and ranges from scientific experiments to social networks.
+        Big Data means processing and storing massive amounts of data in a
+        efficient way, possibly on the cloud or on cloudlets. With easy and
+        fast development cycles, managed object-oriented programming languages
+        (such as Java) are now preferred languages to implement most Big Data
+        platforms. With the increasing importance of Big Data, we identify two
+        main requirements that are common to most platforms running on any
+        tier of modern cloud computing platforms: i) the ability to tolerate
+        faults and to adapt to the number of nodes to satisfy new workload
+        requirements, and ii) the ability to scale with the amount of local
+        resources. In this talk, we address two solutions to deal with the
+        above requirements: i) JLM, live migration of running Java
+        applications, and ii) NG2C, an N-generational Garbage Collection (GC)
+        algorithm. Both solutions improve Big Data platforms performance by
+        decreasing the number of objects to copy between physical nodes (for
+        migration) and heap generations (for GC). With JLM and NG2C, both
+        latency and throughput is improved for Big Data applications when a
+        migration or a GC takes place, thus increasing applications performance.
       </li>
 
       <li>
