--- a/pages/program.html
+++ b/pages/program.html
@@ -84,7 +84,7 @@ slug: program2017
 
   <li>
     <strong>13:30 - Introduction MECC and Keynote by Prof. Paulo Ferreira (INESC-ID, IST)</strong><br>
-    Topic: <em>Live Migration and Garbage Collection for Big Data Java Applications</em>
+    Topic: <em>Live Migration and Garbage Collection for Big Data Java Applications</em><br>
     <strong>Abstract:</strong> The need to process large amounts of data, Big Data, is a
     reality, and ranges from scientific experiments to social networks.
     Big Data means processing and storing massive amounts of data in a
