reformatted keynote link

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 
 
   <div class="container">
+    <h3 style="color: purple; text-align: center;">M4IoT 2017 has ended. Thank you to all participants that made the event so valuable and successful!</h3>
     <p>
-      M4IoT 2017 has ended. Thank you to all participants that made the event so valuable and successful! <br>
-      You can (re-) watch the Keynote on "The Blockchain: What It is and Why It Matters for Us" by Douglas Schmidt <a href="https://www.youtube.com/watch?v=hOxlnClDAOo" target="_blank">here</a>.
+      You can (re-) watch the Keynote on <strong>"The Blockchain: What It is and Why It Matters for Us"</strong> by Douglas Schmidt <a href="https://www.youtube.com/watch?v=hOxlnClDAOo" target="_blank">here</a>.
     </p>
 
     <h1 id="welcome">Welcome</h1>
