--- a/pages/2017.html
+++ b/pages/2017.html
@@ -22,7 +22,7 @@ slug: 2017
 
   <link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Martel:400,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/m4iot.css">
+  <link rel="stylesheet" type="text/css" href="../css/m4iot.css">
 </head>
 <body>
   <div id="top-of-page"></div>
@@ -39,7 +39,7 @@ slug: 2017
 
 
   <div class="logo">
-    <img src="img/logo.png" alt="M4IoT logo" style="width:100%;"/>
+    <img src="../img/logo.png" alt="M4IoT logo" style="width:100%;"/>
     <p>
       Workshop on Middleware and Applications for the Internet of Things<br>
       (co-located with the 2017 Middleware conference in Las Vegas, USA)
