preliminary pc, and fix to submission sentence

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       Please indicate the respective paper type on the title page of your submission.
     </p>
     <p>
-      All submitted papers should describe original work and have not be published or under review anywhere. The papers will be judged on the basis of their clarity, relevance, originality, and contribution. The page limits must include abstract, all figures, tables, and references.
+      All submitted papers should describe original work and must not be published or under review anywhere. The papers will be judged on the basis of their clarity, relevance, originality, and contribution. The page limits must include abstract, all figures, tables, and references.
     </p>
     <p>
       Along with the paper, you are encouraged to submit additional material (e.g., a link to a YouTube video) on a separate page which will not be published as part of the proceedings.
@@ -246,7 +246,7 @@
       </li>
     </ul>
 
-    <h3>Program committee</h3>
+    <h3>Preliminary program committee</h3>
     <ul>
       <li>
         Davy Preuveneers <span class="location">Leuven University, Belgium</span>
