added links to past M4IoT editions

--- a/index.html
+++ b/index.html
@@ -47,6 +47,24 @@
     <p>
       Following the successful <a href="/2017" target="_blank">2017 edition</a> of the Federated Workshop on Middleware and Applications for the Internet of Things, we are happy to announce the 2018 edition. We are looking forward your submissions!
     </p>
+    <h3>Past editions of M4IoT</h3>
+    <ul>
+      <li>
+        <a href="http://www.m4iot.org/2017/" target="_blank">4th Workshop on Middleware and Applications for the Internet of Things (M4IoT 2017)</a> <span class="location">Las Vegas, Nevada, USA</span> (<a href="https://dl.acm.org/citation.cfm?id=3152141" target="_blank">proceedings</a>)
+      </li>
+
+      <li>
+        <a href="http://www.lii.enac.fr/event/m4iot16/" target="_blank">3rd Workshop on Middleware for Context-Aware Applications in the IoT (M4IoT 2016)</a> <span class="location">Trento, Italy</span> (<a href="https://dl.acm.org/citation.cfm?id=3008631" target="_blank">proceedings</a>)
+      </li>
+
+      <li>
+        <a href="http://www.lii.enac.fr/event/m4iot15/" target="_blank">2nd Workshop on Middleware for Context-Aware Applications in the IoT (M4IoT 2015)</a> <span class="location">Vancouver, British Columbia, Canada</span> (<a href="https://dl.acm.org/citation.cfm?id=2836127" target="_blank">proceedings</a>)
+      </li>
+
+      <li>
+        <a href="http://www.lii.enac.fr/event/m4iot14/" target="_blank">1st Workshop on Middleware for Context-Aware Applications in the IoT (M4IoT 2014)</a> <span class="location">Bordeaux, France</span> (<a href="https://dl.acm.org/citation.cfm?id=2676743" target="_blank">proceedings</a>)
+      </li>
+    </ul>
     <div class="row">
       <a href="#top-of-page" class="btn-up">
         <div class="arrow-up"></div>
