--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <nav>
     <ul>
       <li><a href="#program">Program</a></li>
-      <li><a href="#cfp">Call for Papers</a></li>
+      <li><a href="#cfp">Call for papers</a></li>
       <li><a href="#submissions">Submissions</a></li>
       <li><a href="#dates-location">Dates & location</a></li>
       <li><a href="#organization">Organization</a></li>
