--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@
           Paper submission deadline:
         </td>
         <td>
-          <strong>Sep. 12th, 2018</strong>
+          <strong class="red">Sep. 19th, 2018</strong><br>
+          <strong style="text-decoration: line-through;">Sep. 12th, 2018</strong>
         </td>
       </tr>
       <tr>
