--- a/index.html
+++ b/index.html
@@ -331,6 +331,9 @@
         Stéphane Lavirotte <span class="location">Nice University, France</span>
       </li>
       <li>
+        Thierry Coupaye <span class="location">Orange Labs, France</span>
+      </li>
+      <li>
         Thomas Pasquier <span class="location">Harvard University, USA</span>
       </li>
       <li>
