updated Thomas' affiliation

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         Thierry Coupaye <span class="location">Orange Labs, France</span>
       </li>
       <li>
-        Thomas Pasquier <span class="location">Harvard University, USA</span>
+        Thomas Pasquier <span class="location">University of Bristol, UK</span>
       </li>
       <li>
         Vinod Muthusamy <span class="location">IBM Research, USA</span>
