--- a/index.html
+++ b/index.html
@@ -73,8 +73,21 @@
 
 
     <h1 id="program">Program</h1>
-    <p class="gray">
-      To be announced.
+    <p>
+      The 5th International Workshop on Middleware and Applications for the Internet of Things (M4IoT) will be held on <b>December 11th 2018</b> together with the <a href="http://mecc2018.dcc.fc.up.pt/" target="_blank">3rd Workshop on Middleware for Edge Clouds & Cloudlets</a> at the <a href="http://2018.middleware-conference.org/">2018 ACM/IFIP International Middleware Conference</a> in Rennes, France.
+    </p>
+
+    <p>
+      The preliminary list of accepted papers is:
+      <ul>
+        <li><b>Supporting the Evaluation of Fog-based IoT Applications During the Design Phase</b> (J. Hasenburg, S. Werner, D. Bermbach)</li>
+        <li><b>Public Video Surveillance: Using the Fog to Increase Privacy</b> (M. Grambow, J. Hasenburg, D. Bermbach)</li>
+        <li><b>Towards automated privacy risk assessments in IoT systems</b> (M. Markovic, W. Asif, D. Corsar, N. Jacobs, P. Edwards, M. Rajarajan, C. Cottrill)</li>
+        <li><b>Real-time Distributed In-Situ Benchmarking of Energy Harvesting IoT Devices</b> (A. Thangarajan, F. Yang, W. Joosen, D. Hughes)</li>
+        <li><b>Towards an Intelligent User-Oriented Middleware for Opportunistic Composition of Services in Ambient Spaces</b> (W. Younes, S. Trouilhet, F. Adreit, J. Arcangeli)</li>
+        <li><b>Cross-layer QoS-Aware Resource Allocation for IoT-Enabled Service Choreographies</b> (F. Costa, N. Georgantas, R. Gomes, R. da Rocha, G. Bouloukakis)</li>
+        <li><b>A Middleware Environment for Developing Internet of Things Applications</b> (C. Batista, P. Silva, E. Cavalcante, T. Batista, T. Barros, C. Takahasi, T. Cardoso, J. Neto, R. Ribeiro)</li>
+      </ul>
     </p>
 
     <div class="row">
