added two so far preliminary papers; marked position papers

--- a/index.html
+++ b/index.html
@@ -81,11 +81,13 @@
       The preliminary list of accepted papers is:
       <ul>
         <li><b>Supporting the Evaluation of Fog-based IoT Applications During the Design Phase</b> (J. Hasenburg, S. Werner, D. Bermbach)</li>
-        <li><b>Public Video Surveillance: Using the Fog to Increase Privacy</b> (M. Grambow, J. Hasenburg, D. Bermbach)</li>
-        <li><b>Towards automated privacy risk assessments in IoT systems</b> (M. Markovic, W. Asif, D. Corsar, N. Jacobs, P. Edwards, M. Rajarajan, C. Cottrill)</li>
+        <li><b>Expect the unexpected: Towards a middleware for policy adaptation in IoT platforms</b> (D. Jonckers, B. Lagaisse, W. Joosen) <span class="gray">position paper</span></li>
+        <li><b>Public Video Surveillance: Using the Fog to Increase Privacy</b> (M. Grambow, J. Hasenburg, D. Bermbach) <span class="gray">position paper</span></li>
+        <li><b>Towards automated privacy risk assessments in IoT systems</b> (M. Markovic, W. Asif, D. Corsar, N. Jacobs, P. Edwards, M. Rajarajan, C. Cottrill) <span class="gray">position paper</span></li>
         <li><b>Real-time Distributed In-Situ Benchmarking of Energy Harvesting IoT Devices</b> (A. Thangarajan, F. Yang, W. Joosen, D. Hughes)</li>
         <li><b>Towards an Intelligent User-Oriented Middleware for Opportunistic Composition of Services in Ambient Spaces</b> (W. Younes, S. Trouilhet, F. Adreit, J. Arcangeli)</li>
-        <li><b>Cross-layer QoS-Aware Resource Allocation for IoT-Enabled Service Choreographies</b> (F. Costa, N. Georgantas, R. Gomes, R. da Rocha, G. Bouloukakis)</li>
+        <li><b>Cross-layer QoS-Aware Resource Allocation for IoT-Enabled Service Choreographies</b> (F. Costa, N. Georgantas, R. Gomes, R. da Rocha, G. Bouloukakis) <span class="gray">position paper</span></li>
+        <li><b>Towards End-to-end Privacy for Publish/Subscribe Architectures in the Internet of Things</b> (S. Coroller, S. Chabridon, M. Laurent, D. Conan, J. Leneutre) <span class="gray">position paper</span></li>
         <li><b>A Middleware Environment for Developing Internet of Things Applications</b> (C. Batista, P. Silva, E. Cavalcante, T. Batista, T. Barros, C. Takahasi, T. Cardoso, J. Neto, R. Ribeiro)</li>
       </ul>
     </p>
