--- a/pages/program2018.html
+++ b/pages/program2018.html
@@ -53,6 +53,7 @@ slug: program2018
   <li>
     <strong>11:00 - M4IoT Session: Privacy (cont.) and QoS & Cost</strong>
     <ul>
+      <li><b>Towards End-to-end Privacy for Publish/Subscribe Architectures in the Internet of Things</b> (S. Coroller, S. Chabridon, M. Laurent, D. Conan, J. Leneutre) <span class="gray">position paper</span></li>
       <li><b>Real-time Distributed In-Situ Benchmarking of Energy Harvesting IoT Devices</b> (A. Thangarajan, F. Yang, W. Joosen, D. Hughes)</li>
       <li><b>Cross-layer QoS-Aware Resource Allocation for IoT-Enabled Service Choreographies</b> (F. Costa, N. Georgantas, R. Gomes, R. da Rocha, G. Bouloukakis) <span class="gray">position paper</span></li>
     </ul>
@@ -67,6 +68,8 @@ slug: program2018
     <ul>
       <li><b>Supporting the Evaluation of Fog-based IoT Applications During the Design Phase</b> (J. Hasenburg, S. Werner, D. Bermbach)</li>
       <li><b>A Middleware Environment for Developing Internet of Things Applications</b> (C. Batista, P. Silva, E. Cavalcante, T. Batista, T. Barros, C. Takahasi, T. Cardoso, J. Neto, R. Ribeiro)</li>
+      <li><b>Expect the unexpected: Towards a middleware for policy adaptation in IoT platforms</b> (D. Jonckers, B. Lagaisse, W. Joosen) <span class="gray">position paper</span></li>
+      <li><b>Towards an Intelligent User-Oriented Middleware for Opportunistic Composition of Services in Ambient Spaces</b> (W. Younes, S. Trouilhet, F. Adreit, J. Arcangeli)</li>
     </ul>
   </li>
 
