revised MECC planning (no keynote)

--- a/pages/program2018.html
+++ b/pages/program2018.html
@@ -78,13 +78,7 @@ slug: program2018
   </li>
 
   <li>
-    <strong>15:30 - MECC Keynote</strong>
-    Topic: <em>T.b.d.</em><br>
-    <strong>Abstract:</strong> T.b.d.
-  </li>
-
-  <li>
-    <strong>16:15 - MECC Session</strong>
+    <strong>15:30 - MECC Session</strong>
     <ul>
       <li><b>METRIC: A Middleware for Entry Transactional Database Clustering at the Edge</b> (E. Saurez, B. Balasubramanian, R. Schlichting, B. Tschaen, Z. Huang, S. Puzhavakath Narayanan, U. Ramachandran)</li>
       <li><b>ShareLatex on the Edge: Evaluation of the Hybrid Core/Edge Deployment of a Microservices-based Application</b> (G. Tato, M. Bertier, E. Rivière, C. Tedeschi)</li>
@@ -92,7 +86,7 @@ slug: program2018
   </li>
 
   <li>
-    <strong>17:00 - Wrap up</strong>
+    <strong>16:15 - Discussion and Wrap-Up</strong>
   </li>
 </ul>
 
