updated camera-ready deadline

--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
           Camera-ready copies:
         </td>
         <td>
-          <strong>Oct. 19th 2018</strong>
+          <strong class="red">Oct. 27th, 2018</strong><br>
+          <strong style="text-decoration: line-through;">Oct. 19th 2018</strong>
         </td>
       </tr>
       <tr>
