added MECC to introduction

--- a/pages/program2018.html
+++ b/pages/program2018.html
@@ -33,7 +33,7 @@ slug: program2018
 
 <ul>
   <li>
-    <strong>9:00 - Introduction M4IoT and keynote</strong><br>
+    <strong>9:00 - Introduction M4IoT/MECC and keynote</strong><br>
     Topic: <em>T.b.d.</em><br>
     <strong>Abstract:</strong> T.b.d.
   </li>
