--- a/index.html
+++ b/index.html
@@ -77,20 +77,70 @@
       The 5th International Workshop on Middleware and Applications for the Internet of Things (M4IoT) will be held on <b>December 11th 2018</b> together with the <a href="http://mecc2018.dcc.fc.up.pt/" target="_blank">3rd Workshop on Middleware for Edge Clouds & Cloudlets</a> at the <a href="http://2018.middleware-conference.org/">2018 ACM/IFIP International Middleware Conference</a> in Rennes, France.
     </p>
 
-    <p>
-      The preliminary list of accepted papers is:
-      <ul>
-        <li><b>Supporting the Evaluation of Fog-based IoT Applications During the Design Phase</b> (J. Hasenburg, S. Werner, D. Bermbach)</li>
-        <li><b>Expect the unexpected: Towards a middleware for policy adaptation in IoT platforms</b> (D. Jonckers, B. Lagaisse, W. Joosen) <span class="gray">position paper</span></li>
-        <li><b>Public Video Surveillance: Using the Fog to Increase Privacy</b> (M. Grambow, J. Hasenburg, D. Bermbach) <span class="gray">position paper</span></li>
-        <li><b>Towards automated privacy risk assessments in IoT systems</b> (M. Markovic, W. Asif, D. Corsar, N. Jacobs, P. Edwards, M. Rajarajan, C. Cottrill) <span class="gray">position paper</span></li>
-        <li><b>Real-time Distributed In-Situ Benchmarking of Energy Harvesting IoT Devices</b> (A. Thangarajan, F. Yang, W. Joosen, D. Hughes)</li>
-        <li><b>Towards an Intelligent User-Oriented Middleware for Opportunistic Composition of Services in Ambient Spaces</b> (W. Younes, S. Trouilhet, F. Adreit, J. Arcangeli)</li>
-        <li><b>Cross-layer QoS-Aware Resource Allocation for IoT-Enabled Service Choreographies</b> (F. Costa, N. Georgantas, R. Gomes, R. da Rocha, G. Bouloukakis) <span class="gray">position paper</span></li>
-        <li><b>Towards End-to-end Privacy for Publish/Subscribe Architectures in the Internet of Things</b> (S. Coroller, S. Chabridon, M. Laurent, D. Conan, J. Leneutre) <span class="gray">position paper</span></li>
-        <li><b>A Middleware Environment for Developing Internet of Things Applications</b> (C. Batista, P. Silva, E. Cavalcante, T. Batista, T. Barros, C. Takahasi, T. Cardoso, J. Neto, R. Ribeiro)</li>
-      </ul>
-    </p>
+    <h4>Tuesday, December 11th 2018</h4>
+
+    <ul>
+      <li>
+        <strong>9:00 - Introduction M4IoT/MECC and keynote by Paulo Ferreira</strong><br>
+        Topic: <em>Live Migration and Garbage Collection for Big Data Java Applications</em><br>
+        <strong>Abstract:</strong> The need to process large amounts of data, Big Data, is a reality, and ranges from scientific experiments to social networks. Big Data means processing and storing massive amounts of data in a efficient way, possibly on the cloud or on cloudlets. With easy and fast development cycles, managed object-oriented programming languages (such as Java) are now preferred languages to implement most Big Data platforms.
+        
+        With the increasing importance of Big Data, we identify two main requirements that are common to most platforms running on any tier of modern cloud computing platforms: i) the ability to tolerate faults and to adapt to the number of nodes to satisfy new workload requirements, and ii) the ability to scale with the amount of local resources.
+        
+        In this talk, we address two solutions to deal with the above requirements: i) JLM, live migration of running Java applications, and ii) NG2C, an N-generational Garbage Collection (GC) algorithm. Both solutions improve Big Data platforms performance by decreasing the number of objects to copy between physical nodes (for migration) and heap generations (for GC). With JLM and NG2C, both latency and throughput is improved for Big Data applications when a migration or a GC takes place, thus increasing applications performance.
+      </li>
+
+      <li>
+        <strong>10:00 - M4IoT Session: Privacy</strong>
+        <ul>
+          <li><b>Public Video Surveillance: Using the Fog to Increase Privacy</b> (M. Grambow, J. Hasenburg, D. Bermbach) <span class="gray">position paper</span></li>
+          <li><b>Towards automated privacy risk assessments in IoT systems</b> (M. Markovic, W. Asif, D. Corsar, N. Jacobs, P. Edwards, M. Rajarajan, C. Cottrill) <span class="gray">position paper</span></li>
+        </ul>
+      </li>
+
+      <li>
+        <strong>10:30 - Coffee break</strong>
+      </li>
+
+      <li>
+        <strong>11:00 - M4IoT Session: Privacy (cont.) and QoS & Cost</strong>
+        <ul>
+          <li><b>Towards End-to-end Privacy for Publish/Subscribe Architectures in the Internet of Things</b> (S. Coroller, S. Chabridon, M. Laurent, D. Conan, J. Leneutre) <span class="gray">position paper</span></li>
+          <li><b>Real-time Distributed In-Situ Benchmarking of Energy Harvesting IoT Devices</b> (A. Thangarajan, F. Yang, W. Joosen, D. Hughes)</li>
+          <li><b>Cross-layer QoS-Aware Resource Allocation for IoT-Enabled Service Choreographies</b> (F. Costa, N. Georgantas, R. Gomes, R. da Rocha, G. Bouloukakis) <span class="gray">position paper</span></li>
+        </ul>
+      </li>
+
+      <li>
+        <strong>12:00 - Lunch break</strong>
+      </li>
+
+      <li>
+        <strong>13:30 - M4IoT Session: Fog and Autonomic IoT</strong><br>
+        <ul>
+          <li><b>Supporting the Evaluation of Fog-based IoT Applications During the Design Phase</b> (J. Hasenburg, S. Werner, D. Bermbach)</li>
+          <li><b>A Middleware Environment for Developing Internet of Things Applications</b> (C. Batista, P. Silva, E. Cavalcante, T. Batista, T. Barros, C. Takahasi, T. Cardoso, J. Neto, R. Ribeiro)</li>
+          <li><b>Expect the unexpected: Towards a middleware for policy adaptation in IoT platforms</b> (D. Jonckers, B. Lagaisse, W. Joosen) <span class="gray">position paper</span></li>
+          <li><b>Towards an Intelligent User-Oriented Middleware for Opportunistic Composition of Services in Ambient Spaces</b> (W. Younes, S. Trouilhet, F. Adreit, J. Arcangeli)</li>
+        </ul>
+      </li>
+
+      <li>
+        <strong>15:00 - Coffee break</strong>
+      </li>
+
+      <li>
+        <strong>15:30 - MECC Session</strong>
+        <ul>
+          <li><b>METRIC: A Middleware for Entry Transactional Database Clustering at the Edge</b> (E. Saurez, B. Balasubramanian, R. Schlichting, B. Tschaen, Z. Huang, S. Puzhavakath Narayanan, U. Ramachandran)</li>
+          <li><b>ShareLatex on the Edge: Evaluation of the Hybrid Core/Edge Deployment of a Microservices-based Application</b> (G. Tato, M. Bertier, E. Rivière, C. Tedeschi)</li>
+        </ul>
+      </li>
+
+      <li>
+        <strong>16:15 - Discussion and Wrap-Up</strong>
+      </li>
+    </ul>
 
     <div class="row">
       <a href="#top-of-page" class="btn-up">
