--- a/pages/2018.html
+++ b/pages/2018.html
@@ -70,7 +70,7 @@ slug: 2018
     </nav>
 
     <div class="logo">
-      <img src="img/logo18.png" alt="M4IoT logo" style="width:100%;" />
+      <img src="/img/logo18.png" alt="M4IoT logo" style="width:100%;" />
       <p style="font-size: 0.75rem;">
         The 5th International Workshop on Middleware and Applications for the
         Internet of Things<br />
