--- a/index.html
+++ b/index.html
@@ -81,10 +81,9 @@
       <h1 id="welcome">Welcome</h1>
       <p>
         Following the successful
-        <a href="/2018" target="_blank">2018 edition</a> editions of the
-        Workshop on Middleware and Applications for the Internet of Things, we
-        are happy to announce the 2019 edition. We are looking forward your
-        submissions!
+        <a href="/2018" target="_blank">2018 edition</a> of the Workshop on
+        Middleware and Applications for the Internet of Things, we are happy to
+        announce the 2019 edition. We are looking forward your submissions!
       </p>
       <h3>Past editions of M4IoT</h3>
       <ul>
