--- a/index.html
+++ b/index.html
@@ -417,8 +417,12 @@
         </li>
       </ul>
 
-      <h3>Preliminary program committee</h3>
+      <h3>Program committee</h3>
       <ul>
+        <li>
+          Abhishek Chandra
+          <span class="location">University of Minnesota, USA</span>
+        </li>
         <li>
           Abhishek Dubey
           <span class="location">Vanderbilt University, USA</span>
