Update Kevin Lee's affiliation

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
         <li>
           Kevin Lee
           <span class="location"
-            >Nottingham Trent University, United Kingdom</span
+            >Deakin University, Australia</span
           >
         </li>
         <li>
