--- a/pages/program2019.html
+++ b/pages/program2019.html
@@ -41,8 +41,8 @@ slug: program2019
   <li>
     <strong>10:00 - Session: Fog Programming</strong>
     <ul>
-      <li><b>A Survey on Fog Programming: Concepts, State-of-the-Art, and Research Challenges</b> (Dapeng Lan, Amir Taherkordi, Frank Eliassen and Geir Horn) <span class="gray">(DFSD)</span></li>
-      <li><b>ProgCEP: A Programming Model for Complex Event Processing over Fog Infrastructure</b> (Manisha Luthra and Boris Koldehofe) <span class="gray">(DFSD)</span></li>
+      <li><b>A Survey on Fog Programming: Concepts, State-of-the-Art, and Research Challenges</b> (Dapeng Lan, Amir Taherkordi, Frank Eliassen and Geir Horn) <span class="gray em">DFSD</span></li>
+      <li><b>ProgCEP: A Programming Model for Complex Event Processing over Fog Infrastructure</b> (Manisha Luthra and Boris Koldehofe) <span class="gray em">DFSD</span></li>
     </ul>
   </li>
 
@@ -53,9 +53,9 @@ slug: program2019
   <li>
     <strong>11:00 - Session: Edge Computing</strong>
     <ul>
-      <li><b>Container Deployment Strategy for Edge Networking</b> (Walter Wong, Aleksandr Zavodovski, Pengyuan Zhou and Jussi Kangasharju) <span class="gray">(MECC)</span></li>
-      <li><b>Tango of Edge and Cloud Execution for Reliability</b> (Shikhar Suryavansh, Chandan Bothra, Mung Chiang, Chunyi Peng and Saurabh Bagchi) <span class="gray">(MECC)</span></li>
-      <li><b>Towards distributed, fair, and deadline-driven resource allocation for Cloudlets</b> (Stratos Dimopoulos, Chandra Krintz and Rich Wolski) <span class="gray">(MECC)</span></li>
+      <li><b>Container Deployment Strategy for Edge Networking</b> (Walter Wong, Aleksandr Zavodovski, Pengyuan Zhou and Jussi Kangasharju) <span class="gray em">MECC</span></li>
+      <li><b>Tango of Edge and Cloud Execution for Reliability</b> (Shikhar Suryavansh, Chandan Bothra, Mung Chiang, Chunyi Peng and Saurabh Bagchi) <span class="gray em">MECC</span></li>
+      <li><b>Towards distributed, fair, and deadline-driven resource allocation for Cloudlets</b> (Stratos Dimopoulos, Chandra Krintz and Rich Wolski) <span class="gray em">MECC</span></li>
     </ul>
   </li>
 
@@ -66,17 +66,17 @@ slug: program2019
   <li>
     <strong>13:30 - Session: Middleware</strong><br>
     <ul>
-      <li><b>SORRIR: A Resilient Self-organizing Middleware for IoT Applications</b> (Jörg Domaschka, Christian Berger, Hans P. Reiser, Philipp Eichhammer, Frank Griesinger, Jakob Pietron, Matthias Tichy, Franz J. Hauck, Gerhard Habiger) <span class="gray">(M4IoT, short paper)</span></li>
-      <li><b>Semantic Description of Artificial DNA for an Organic Computing Middleware Architecture</b> (Uwe Brinkschulte, Mathias Pacher) <span class="gray">(MISE)</span></li>
-      <li><b>Towards a QoS-aware Cyber Physical Networking Middleware Architecture</b> (Melanie Brinkschulte, Christian Becker,  Christian Krupitzer) <span class="gray">(MISE)</span></li>
+      <li><b>SORRIR: A Resilient Self-organizing Middleware for IoT Applications</b> (Jörg Domaschka, Christian Berger, Hans P. Reiser, Philipp Eichhammer, Frank Griesinger, Jakob Pietron, Matthias Tichy, Franz J. Hauck, Gerhard Habiger) <span class="gray em">M4IoT, short paper</span></li>
+      <li><b>Semantic Description of Artificial DNA for an Organic Computing Middleware Architecture</b> (Uwe Brinkschulte, Mathias Pacher) <span class="gray em">MISE</span></li>
+      <li><b>Towards a QoS-aware Cyber Physical Networking Middleware Architecture</b> (Melanie Brinkschulte, Christian Becker,  Christian Krupitzer) <span class="gray em">MISE</span></li>
     </ul>
   </li>
 
   <li>
     <strong>14:30 - Session: Middleware</strong><br>
     <ul>
-      <li><b>Experience Report: Enhancing Transparency of MQTT Brokers For IoT Applications Through Provenance Streams</b> (Milan Markovic and Peter  Edwards) <span class="gray">(M4IoT, short paper)</span></li>
-      <li><b>Automatic Translation of Spatio-Temporal Logics to Streaming-Based Monitoring Applications for IoT-Equipped Autonomous Agents</b> (Luca Bortolussi, Vincenzo Gulisano, Eric Medvet, Dimitrios Palyvos-Giannas) <span class="gray">(M4IoT)</span></li>
+      <li><b>Experience Report: Enhancing Transparency of MQTT Brokers For IoT Applications Through Provenance Streams</b> (Milan Markovic and Peter  Edwards) <span class="gray em">M4IoT, short paper</span></li>
+      <li><b>Automatic Translation of Spatio-Temporal Logics to Streaming-Based Monitoring Applications for IoT-Equipped Autonomous Agents</b> (Luca Bortolussi, Vincenzo Gulisano, Eric Medvet, Dimitrios Palyvos-Giannas) <span class="gray em">M4IoT</span></li>
     </ul>
   </li>
 
@@ -87,8 +87,8 @@ slug: program2019
   <li>
     <strong>15:30 - Session: Software Engineering for IoT</strong>
     <ul>
-      <li><b>Untangling the physical-digital knot when designing advanced IoT ecosystems</b> (Ilse Bohé, Michiel Willocx, Vincent Naessens) <span class="gray">(M4IoT)</span></li>
-      <li><b>A Development Environment for FIWARE-based Internet of Things Applications</b> (Lucas Dantas, Everton Cavalcante, Thais Batista) <span class="gray">(M4IoT)</span></li>
+      <li><b>Untangling the physical-digital knot when designing advanced IoT ecosystems</b> (Ilse Bohé, Michiel Willocx, Vincent Naessens) <span class="gray em">M4IoT</span></li>
+      <li><b>A Development Environment for FIWARE-based Internet of Things Applications</b> (Lucas Dantas, Everton Cavalcante, Thais Batista) <span class="gray em">M4IoT</span></li>
     </ul>
   </li>
 
